# hypergen

./: .gitignore  README.md
cpp/: CMakeLists.txt  hyperelliptic.cpp
legacy/python_prototype/: README.md
results/p11_enumerate/: p11_g2_s_1.sqlite
results/p11_old/: p11_g1_s_0_old.sqlite  p11_g2_s_0_old.sqlite  p11_g3_s_0_old.sqlite  p11_g4_s_0_old.sqlite  p11_g5_s_0_old.sqlite  p11_g6_s_0_old.sqlite
results/p13_enumerate/: p13_g2_s_1.sqlite
results/p13_old/: p13_g1_s_0_old.sqlite  p13_g2_s_0_old.sqlite  p13_g3_s_0_old.sqlite  p13_g4_s_0_old.sqlite  p13_g5_s_0_old.sqlite
results/p17_enumerate/: p17_g2_s_1.sqlite
results/p3_enumerate/: p3_g2_s_1.sqlite  p3_g3_s_1.sqlite  p3_g4_s_1.sqlite  p3_g5_s_1.sqlite  p3_g6_s_1.sqlite  p3_g7_s_1.sqlite  p3_g8_s_1.sqlite  p3_g9_s_1.sqlite
results/p3_enumerate_batch/: p3_g1_s_1.sqlite  p3_g2_s_1.sqlite  p3_g3_s_1.sqlite  p3_g4_s_1.sqlite  p3_g5_s_1.sqlite  p3_g7_s_1.sqlite
results/p3_old/: p3_g10_s_0_old.sqlite  p3_g11_s_0_old.sqlite  p3_g12_s_0_old.sqlite  p3_g13_s_0_old.sqlite  p3_g14_s_0_old.sqlite  p3_g15_s_0_old.sqlite  p3_g16_s_0_old.sqlite  p3_g1_s_0_old.sqlite  p3_g2_s_0_old.sqlite  p3_g3_s_0_old.sqlite  p3_g4_s_0_old.sqlite  p3_g5_s_0_old.sqlite  p3_g6_s_0_old.sqlite  p3_g7_s_0_old.sqlite  p3_g8_s_0_old.sqlite  p3_g9_s_0_old.sqlite
results/p3_random/: p3_g10_s_1_random.sqlite  p3_g11_s_1_random.sqlite  (+2 more)
scripts/: add_branch_divisor_type.py  convert_old_json_to_sqlite.py  migrate_factorization_patterns_to_partitions.py  run_p3_enumerate_g9_g13.sh  run_p3_random_g11_g16.sh  run_prime_sweep.sh
(+101 files in other folders)
